// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactRefreshLogBox default syntax > runtime error 1`] = `
"index.js (5:9) @ eval

  3 | setInterval(() => {
  4 |   i++
> 5 |   throw Error('no ' + i)
    |         ^
  6 | }, 1000)
  7 | export default function FunctionNamed() {
  8 |   return <div />"
`;

exports[`ReactRefreshLogBox default syntax > runtime error: isWin32-false--isRspack-true 1`] = `
"index.js (5:9) @ <unknown>

  3 | setInterval(() => {
  4 |   i++
> 5 |   throw Error('no ' + i)
    |         ^
  6 | }, 1000)
  7 | export default function FunctionNamed() {
  8 |   return <div />"
`;

exports[`ReactRefreshLogBox turbo syntax > runtime error 1`] = `
"index.js (5:9) @ eval

  3 | setInterval(() => {
  4 |   i++
> 5 |   throw Error('no ' + i)
    |         ^
  6 | }, 1000)
  7 | export default function FunctionNamed() {
  8 |   return <div />"
`;
